Fix for squashed text in Win7/FF12/Monobook

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
@@ -7,30 +7,27 @@
 	min-height: 150px;
 }
 .articleFeedbackv5-feedback .articleFeedbackv5-comment-wrap {
+	padding: 0 0 20px 30px;
 	float: left;
 	width: 70%;
 }
-.articleFeedbackv5-feedback.articleFeedbackv5-comment-notoolbox .articleFeedbackv5-comment-wrap {
-	width: 85%;
-}
 .articleFeedbackv5-feedback .articleFeedbackv5-comment-wrap .articleFeedbackv5-comment-head {
-	position: absolute;
-	top: 0;
-	left: 30px;
 	line-height: 24px;
 	margin-top: 10px;
-	width: 60%;
+	width: 70%;
 }
 .articleFeedbackv5-feedback .articleFeedbackv5-comment-wrap blockquote {
-	margin: 50px 0;
-	padding-left: 30px;
+	display: block;
+	font-size: 1.25em;
+	margin: 10px 0;
+	padding: 0 0 20px;
 }
 .articleFeedbackv5-feedback .articleFeedbackv5-comment-wrap .articleFeedbackv5-vote-wrapper {
 	position: absolute;
 	bottom: 0;
 	left: 30px;
 	margin-bottom: 5px;
-	width: 60%;
+	width: 70%;
 }
 .articleFeedbackv5-feedback .articleFeedbackv5-comment-tags {
 	padding: 10px 10px 0 0;
@@ -39,6 +36,11 @@
 .articleFeedbackv5-feedback .articleFeedbackv5-feedback-tools {
 	float: right;
 	width: 250px;
+}
+.articleFeedbackv5-feedback.articleFeedbackv5-comment-notoolbox .articleFeedbackv5-comment-wrap,
+.articleFeedbackv5-feedback.articleFeedbackv5-comment-notoolbox  .articleFeedbackv5-comment-head,
+.articleFeedbackv5-feedback.articleFeedbackv5-comment-notoolbox  .articleFeedbackv5-vote-wrapper {
+	width: 85%;
 }
 
 /** Feedback row **/
